--- a/shame.css
+++ b/shame.css
@@ -26,6 +26,15 @@ img {
   height: auto;
 }
 
+body.with-modal {
+  overflow: hidden;
+}
+
+.catalog-list {
+  margin: 0;
+  padding: 0;
+}
+
 .product-gallery {
   display: flex;
   width: 300px;
@@ -117,4 +126,85 @@ img {
 .product-photo-full img,
 .product-gallery-item img {
   border-radius: 5px;
+}
+
+.open-gallery-modal {
+  margin-top: 10px;
+  border: 1px solid lightgray;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding-top: 60px;
+  background-color: rgba(0, 0, 0, 0.5);
+  overflow: auto;
+}
+
+.product-photos-modal {
+  position: absolute;
+  top: 60px;
+  left: 50%;
+  width: 100%;
+  padding: 20px 0;
+  background-color: white;
+  border-radius: 5px;
+  transform: translateX(-50%);
+}
+
+.modal-close {
+  position: absolute;
+  top: -60px;
+  left: 50%;
+  width: 50px;
+  height: 50px;
+  padding: 0;
+  font: inherit;
+  border: 0;
+  background-color: lightgray;
+  border-radius: 50%;
+  transform: translateX(-50%);
+  cursor: pointer;
+}
+
+.modal-close:hover,
+.modal-close:focus {
+  background-color: #b1afaf;
+}
+
+.modal-close:active {
+  background-color: gray;
+}
+
+.modal-close::before,
+.modal-close::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 5px;
+  height: 25px;
+  border-radius: 2px;
+  background-color: black;
+}
+
+.modal-close::before {
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.modal-close::after {
+  transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.product-photos-modal .product-photo-full {
+  width: 300px;
+  height: 450px;
+  margin: 0 auto 20px;
+}
+
+.product-photos-modal .product-gallery {
+  margin: 0 auto;
 }
