--- a/shame.css
+++ b/shame.css
@@ -26,6 +26,18 @@ img {
   height: auto;
 }
 
+a {
+  text-decoration: none;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font: normal 400 14px/22px 'Trebuchet MS', Tahoma, sans-serif;
+  color: #202020;
+  background-color: white;
+}
+
 body.with-modal {
   overflow: hidden;
 }
@@ -33,6 +45,10 @@ body.with-modal {
 .catalog-list {
   margin: 0;
   padding: 0;
+}
+
+.catalog-item-image img {
+  border-radius: 5px;
 }
 
 .product-gallery {
@@ -207,4 +223,218 @@ body.with-modal {
 
 .product-photos-modal .product-gallery {
   margin: 0 auto;
+}
+
+.slideshow {
+  width: 100%;
+}
+
+.slideshow-container {
+  position: relative;
+  width: 100%;
+}
+
+.slideshow-list-wrapper {
+  width: 100%;
+  overflow: hidden;
+}
+
+.slideshow-list {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  transition: transform 0.5s;
+}
+
+.slideshow-item {
+  position: relative;
+  flex-shrink: 0;
+  width: 100%;
+  background-color: lightgray;
+}
+
+.slideshow-item h3 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  margin: 0;
+  padding: 5px;
+  font-size: 15px;
+  line-height: 25px;
+  text-align: center;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.slideshow-item img {
+  width: 100%;
+  height: 100%;
+}
+
+.slideshow-prev,
+.slideshow-next {
+  display: none;
+}
+
+.slideshow-controls {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  transform: translate(-50%, -100%);
+}
+
+.slideshow-controls li:not(:last-child) {
+  margin-right: 10px;
+}
+
+.slideshow-control {
+  display: block;
+  width: 10px;
+  height: 10px;
+  padding: 0;
+  border: 2px solid white;
+  border-radius: 50%;
+  background-color: transparent;
+  transition: background-color 0.5s;
+  cursor: pointer;
+}
+
+.slideshow-control.selected {
+  background-color: white;
+}
+
+@media only screen and (min-width: 650px) {
+  .slideshow-control {
+    width: 15px;
+    height: 15px;
+    border-width: 3px;
+  }
+
+  .slideshow-item h3 {
+    padding: 10px;
+    font-size: 30px;
+    line-height: 40px;
+  }
+
+  .slideshow-prev,
+  .slideshow-next {
+    position: absolute;
+    top: 50%;
+    z-index: 1;
+    display: block;
+    width: 80px;
+    height: 80px;
+    padding: 0;
+    border: 0;
+    background-color: transparent;
+    transform: translateY(-50%);
+    cursor: pointer;
+  }
+
+  .slideshow-prev {
+    left: 0;
+  }
+
+  .slideshow-next {
+    right: 0;
+  }
+
+  .slideshow-next::before,
+  .slideshow-next::after,
+  .slideshow-prev::before,
+  .slideshow-prev::after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    width: 25px;
+    height: 40px;
+    background-color: white;
+  }
+
+  .slideshow-prev:hover::before,
+  .slideshow-next:hover::before,
+  .slideshow-prev:hover::after,
+  .slideshow-next:hover::after,
+  .slideshow-prev:focus::before,
+  .slideshow-next:focus::before,
+  .slideshow-prev:focus::after,
+  .slideshow-next:focus::after {
+    background-color: rgba(255, 255, 255, 0.9);
+  }
+
+  .slideshow-next:active::before,
+  .slideshow-next:active::after,
+  .slideshow-prev:active::before,
+  .slideshow-prev:active::after {
+    background-color: rgba(255, 255, 255, 0.5);
+  }
+
+  .slideshow-next::before {
+    top: 0;
+    transform: translateX(-50%) skewX(45deg);
+  }
+
+  .slideshow-next::after {
+    bottom: 0;
+    transform: translateX(-50%) skewX(-45deg);
+  }
+
+  .slideshow-prev::before {
+    top: 0;
+    transform: translateX(-50%) skewX(-45deg);
+  }
+
+  .slideshow-prev::after {
+    bottom: 0;
+    transform: translateX(-50%) skewX(45deg);
+  }
+}
+
+@media only screen and (min-width: 1040px) {
+  .slideshow-container {
+    width: 1024px;
+    margin: 0 auto;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .slideshow-prev {
+    left: -80px;
+  }
+
+  .slideshow-next {
+    right: -80px;
+  }
+
+  .slideshow-prev::before,
+  .slideshow-next::before,
+  .slideshow-prev::after,
+  .slideshow-next::after {
+    background-color: #202020;
+  }
+
+  .slideshow-prev:hover::before,
+  .slideshow-next:hover::before,
+  .slideshow-prev:hover::after,
+  .slideshow-next:hover::after,
+  .slideshow-prev:focus::before,
+  .slideshow-next:focus::before,
+  .slideshow-prev:focus::after,
+  .slideshow-next:focus::after {
+    background-color: rgba(32, 32, 32, 0.8);
+  }
+
+  .slideshow-prev:active::before,
+  .slideshow-next:active::before,
+  .slideshow-prev:active::after,
+  .slideshow-next:active::after {
+    background-color: rgba(32, 32, 32, 0.3);
+  }
 }
