--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -91,7 +91,6 @@
 
     .main-navigation-content {
       max-height: 500px;
-      overflow: auto;
       transition: max-height 0.25s ease-in;
     }
   }
@@ -204,12 +203,12 @@
 
     .main-navigation-content {
       position: static;
+      z-index: 0;
       display: flex;
       width: 700px;
       max-height: none;
       border-radius: 0;
       background-color: $black;
-      overflow: auto;
       transform: none;
       transition: none;
     }
