Stylized "Not found" page

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,7 +18,9 @@
 @import "layout/footer";
 
 @import "components/spinner_loader";
+@import "components/button";
 
 @import "pages/inner";
+@import "pages/not_found";
 
 @import "./shame.scss";
