--- a/scss/utilities/_colors.scss
+++ b/scss/utilities/_colors.scss
@@ -1,10 +1,12 @@
 $white: rgb(255, 255, 255);
 $black: rgb(0, 0, 0);
 $default_text: rgb(32, 32, 32);
-$header_active: $default_text;
+$header_active: rgb(32, 32, 32);
+$button_active: rgb(32, 32, 32);
 $facebook: rgb(60, 90, 153);
 $facebook_active: rgb(53, 80, 137);
 $vkontakte: rgb(80, 106, 144);
 $vkontakte_active: rgb(72, 95, 129);
 $twitter: rgb(98, 169, 236);
 $twitter_active: rgb(68, 152, 232);
+$not_found_badge: rgb(255, 162, 0);
