--- a/scss/utilities/_colors.scss
+++ b/scss/utilities/_colors.scss
@@ -2,6 +2,7 @@ $white: rgb(255, 255, 255);
 $black: rgb(0, 0, 0);
 $default_text: rgb(32, 32, 32);
 $header_active: rgb(32, 32, 32);
+$current_page_link: rgb(76, 76, 76);
 $button_active: rgb(32, 32, 32);
 $facebook: rgb(60, 90, 153);
 $facebook_active: rgb(53, 80, 137);
