--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,6 +19,7 @@
 
 @import "components/spinner_loader";
 @import "components/button";
+@import "components/slideshow";
 
 @import "pages/inner";
 @import "pages/not_found";
