--- a/scss/utilities/_colors.scss
+++ b/scss/utilities/_colors.scss
@@ -3,7 +3,8 @@ $black: rgb(0, 0, 0);
 $default_text: rgb(32, 32, 32);
 $header_active: rgb(32, 32, 32);
 $current_page_link: rgb(76, 76, 76);
-$button_active: rgb(32, 32, 32);
+$button_hover: rgb(32, 32, 32);
+$button_active: rgb(76, 76, 76);
 $facebook: rgb(60, 90, 153);
 $facebook_active: rgb(53, 80, 137);
 $vkontakte: rgb(80, 106, 144);
@@ -11,3 +12,10 @@ $vkontakte_active: rgb(72, 95, 129);
 $twitter: rgb(98, 169, 236);
 $twitter_active: rgb(68, 152, 232);
 $not_found_badge: rgb(255, 162, 0);
+$slideshow_image: rgb(211, 211, 211);
+$slideshow_image_header: rgba(0, 0, 0, 0.5);
+$slideshow_button_hover: rgba(255, 255, 255, 0.9);
+$slideshow_button_active: rgba(255, 255, 255, 0.5);
+$slideshow_button_desktop: rgb(32, 32, 32);
+$slideshow_button_desktop_hover: rgba(32, 32, 32, 0.9);
+$slideshow_button_desktop_active: rgba(32, 32, 32, 0.5);
