Stylized "Catalog" page

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,6 +20,7 @@
 @import "components/spinner_loader";
 @import "components/button";
 @import "components/slideshow";
+@import "components/catalog_list";
 
 @import "pages/inner";
 @import "pages/not_found";
