--- a/scss/utilities/_colors.scss
+++ b/scss/utilities/_colors.scss
@@ -19,3 +19,6 @@ $slideshow_button_active: rgba(255, 255, 255, 0.5);
 $slideshow_button_desktop: rgb(32, 32, 32);
 $slideshow_button_desktop_hover: rgba(32, 32, 32, 0.9);
 $slideshow_button_desktop_active: rgba(32, 32, 32, 0.5);
+$catalog_item: rgb(211, 211, 211);
+$catalog_item_header: rgba(0, 0, 0, 0.7);
+$product_quantity_input_hover: rgba(0, 0, 0, 0.7);
