Added feature "order product"

--- a/scss/base/_animations.scss
+++ b/scss/base/_animations.scss
@@ -7,3 +7,31 @@
     transform: rotate(360deg);
   }
 }
+
+@keyframes bounce {
+  0% {
+    transform: translate(-50%, -2000px);
+  }
+
+  70% {
+    transform: translate(-50%, 30px);
+  }
+
+  90% {
+    transform: translate(-50%, -10px);
+  }
+
+  100% {
+    transform: translate(-50%, 0);
+  }
+}
+
+@keyframes slide_top {
+  0% {
+    transform: translate(-50%, 0);
+  }
+
+  100% {
+    transform: translate(-50%, -2000px);
+  }
+}
