--- a/scss/utilities/_colors.scss
+++ b/scss/utilities/_colors.scss
@@ -22,3 +22,9 @@ $slideshow_button_desktop_active: rgba(32, 32, 32, 0.5);
 $catalog_item: rgb(211, 211, 211);
 $catalog_item_header: rgba(0, 0, 0, 0.7);
 $product_quantity_input_hover: rgba(0, 0, 0, 0.7);
+$alert_info_color: rgb(12, 84, 96);
+$alert_info_background: rgb(209, 236, 241);
+$alert_info_border: rgb(190, 229, 235);
+$alert_success_color: rgb(21, 87, 36);
+$alert_success_background: rgb(212, 237, 218);
+$alert_success_border: rgb(195, 230, 203);
