--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -4,4 +4,4 @@ $breakpoints: (
   "desktop": 1200px
 );
 
-$z_indexes: ("main-navigation-content", "slideshow-buttons");
+$z_indexes: ("alert", "main-navigation-content", "slideshow-buttons");
