--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,6 +17,7 @@
 @import "layout/main";
 @import "layout/footer";
 
+@import "components/alert";
 @import "components/spinner_loader";
 @import "components/button";
 @import "components/slideshow";
