Stylized "Contacts" page

--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -19,4 +19,9 @@
   &:active {
     background-color: $button_active;
   }
+
+  &:disabled {
+    background-color: $button_disabled;
+    cursor: not-allowed;
+  }
 }
