--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,6 +22,8 @@
 @import "components/button";
 @import "components/slideshow";
 @import "components/catalog_list";
+@import "components/contact_list";
+@import "components/contact_form";
 
 @import "pages/inner";
 @import "pages/not_found";
