--- a/scss/utilities/_colors.scss
+++ b/scss/utilities/_colors.scss
@@ -5,6 +5,7 @@ $header_active: rgb(32, 32, 32);
 $current_page_link: rgb(76, 76, 76);
 $button_hover: rgb(32, 32, 32);
 $button_active: rgb(76, 76, 76);
+$button_disabled: rgba(0, 0, 0, 0.5);
 $facebook: rgb(60, 90, 153);
 $facebook_active: rgb(53, 80, 137);
 $vkontakte: rgb(80, 106, 144);
@@ -28,3 +29,6 @@ $alert_info_border: rgb(190, 229, 235);
 $alert_success_color: rgb(21, 87, 36);
 $alert_success_background: rgb(212, 237, 218);
 $alert_success_border: rgb(195, 230, 203);
+$contact_list_item_background: rgb(211, 211, 211);
+$error_color: rgb(255, 0, 0);
+$contact_form_input_hover: rgba(0, 0, 0, 0.7);
