--- a/scss/utilities/_colors.scss
+++ b/scss/utilities/_colors.scss
@@ -32,3 +32,13 @@ $alert_success_border: rgb(195, 230, 203);
 $contact_list_item_background: rgb(211, 211, 211);
 $error_color: rgb(255, 0, 0);
 $contact_form_input_hover: rgba(0, 0, 0, 0.7);
+$product_photo_background: rgb(211, 211, 211);
+$product_gallery_border: rgb(211, 211, 211);
+$product_gallery_control: rgb(211, 211, 211);
+$product_gallery_control_hover: rgb(177, 175, 175);
+$product_gallery_control_active: rgb(128, 128, 128);
+$product_gallery_arrow_active: rgba(255, 255, 255, 0.8);
+$modal_overlay_background: rgba(0, 0, 0, 0.5);
+$modal_close: rgb(211, 211, 211);
+$modal_close_hover: rgb(177, 175, 175);
+$modal_close_active: rgb(128, 128, 128);
