--- a/scss/components/product/_photos.scss
+++ b/scss/components/product/_photos.scss
@@ -14,6 +14,7 @@
     margin: 0;
     margin-bottom: 15px;
     background-color: $product_photo_background;
+    border-radius: 5px;
   }
 
   .open-fullscreen {
@@ -113,5 +114,12 @@
     margin-right: 19px;
     background-color: $product_photo_background;
     border-radius: 5px;
+  }
+}
+
+@include media_query("tablet") {
+  .product-photos {
+    width: 300px;
+    margin-bottom: 0;
   }
 }
