--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,6 +16,7 @@
 @import "layout/header";
 @import "layout/main";
 @import "layout/footer";
+@import "layout/grid";
 
 @import "components/alert";
 @import "components/spinner_loader";
