--- a/src/scss/utilities/_colors.scss
+++ b/src/scss/utilities/_colors.scss
@@ -42,3 +42,5 @@ $modal_overlay_background: rgba(0, 0, 0, 0.5);
 $modal_close: rgb(211, 211, 211);
 $modal_close_hover: rgb(177, 175, 175);
 $modal_close_active: rgb(128, 128, 128);
+$toggle_purchase_order_form: rgb(211, 211, 211);
+$purchase_image: rgb(211, 211, 211);
