--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,5 +33,8 @@
 @import "components/product/info";
 @import "components/product/modal";
 
+@import "components/cart/list";
+@import "components/cart/order_form";
+
 @import "pages/inner";
 @import "pages/not_found";
