--- a/src/scss/components/cart/_order_form.scss
+++ b/src/scss/components/cart/_order_form.scss
@@ -12,6 +12,11 @@
   background-color: $toggle_purchase_order_form;
   border-radius: 5px;
 
+  span {
+    cursor: pointer;
+    user-select: none;
+  }
+
   &.form-is-open {
     .button {
       transform: rotate(180deg);
@@ -32,7 +37,6 @@
     border-radius: 50%;
     overflow: hidden;
     transition: transform 0.5s;
-    outline: none;
 
     &::before {
       content: "";
@@ -51,11 +55,10 @@
 }
 
 .purchase-order-form {
-  margin-top: 20px;
-
   &-container {
     width: 300px;
     padding: 15px;
+    margin-top: 20px;
     border: 2px solid $black;
     border-radius: 5px;
   }
@@ -67,7 +70,6 @@
     margin-bottom: 15px;
 
     label {
-      align-self: flex-start;
       margin-bottom: 5px;
       font-weight: 700;
       user-select: none;
@@ -111,5 +113,61 @@
     max-height: 1000px;
     overflow: visible;
     transition: max-height 0.5s ease-in;
+  }
+}
+
+@include media_query("tablet") {
+  .toggle-purchase-order-form {
+    &.form-is-open .button,
+    &.form-is-hidden .button {
+      transform: none;
+
+      &::before {
+        top: 50%;
+        width: 20px;
+        height: 20px;
+        border: 0;
+        border-radius: 0;
+        background: url("~img/fullscreen.svg") 0 0 no-repeat;
+        transform: translate(-50%, -50%);
+      }
+    }
+  }
+}
+
+.purchase-order-modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 360px;
+  padding: 20px 30px;
+  color: $default_text;
+  background-color: $white;
+  border-radius: 5px;
+  opacity: 0;
+  transition: opacity 0.5s;
+  transform: translate(-50%, -50%);
+
+  &.open {
+    opacity: 1;
+  }
+
+  h2 {
+    margin: 0;
+    margin-bottom: 20px;
+    @include calculate_font(24px, 30px, false, 700);
+  }
+
+  .purchase-order-form {
+    max-height: none;
+    overflow: visible;
+    transition: none;
+  }
+
+  .purchase-order-form-container {
+    margin-top: 0;
+    padding: 0;
+    border: 0;
+    border-radius: 0;
   }
 }
