--- a/initializers/server/index.ejs
+++ b/initializers/server/index.ejs
@@ -36,6 +36,12 @@
     <link rel="stylesheet" href="<%- webpackAsset('main.css') %>" />
   </head>
   <body>
+    <noscript>
+      <p>
+        Sorry, this site does not work without JS,
+        enable it please, or download new browser :)
+      </p>
+    </noscript>
     <div id="app-root"></div>
     <div id="modal-root"></div>
     <div id="alert-root"></div>
