--- a/src/scss/components/cart/_list.scss
+++ b/src/scss/components/cart/_list.scss
@@ -1,3 +1,9 @@
+.cart-page__homepage-link {
+  display: block;
+  width: 145px;
+  margin: 0 auto;
+}
+
 .purchase-list {
   display: grid;
   grid-template-columns: repeat(auto-fill, 300px);
