--- a/src/scss/components/product/_modal.scss
+++ b/src/scss/components/product/_modal.scss
@@ -6,15 +6,11 @@
   padding: 20px 10px;
   border-radius: 5px;
   background-color: $white;
-  opacity: 0;
   transform: translateX(-50%);
-  transition: opacity 0.5s;
+  animation-name: fade;
+  animation-duration: 0.5s;
 
   .product-gallery {
     margin-bottom: 0;
-  }
-
-  &.open {
-    opacity: 1;
   }
 }
