--- a/src/scss/base/_animations.scss
+++ b/src/scss/base/_animations.scss
@@ -35,3 +35,13 @@
     transform: translate(-50%, -2000px);
   }
 }
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
